fix button ios

--- a/src/_styles/bootstrap-override/bootstrap/_buttons.scss
+++ b/src/_styles/bootstrap-override/bootstrap/_buttons.scss
@@ -59,21 +59,22 @@
     text-align: center;
     font-size: 30px;
   }
-  &:hover,
-  &:focus{
-    color: inherit;
-    @include bg-gradient();
-    &:before{
-      content: "";
-      position: absolute;
-      top:0;
-      right:0;
-      bottom:0;
-      left: 0;
-      border-radius: inherit;
-      border: 3px solid rgba(255, 255, 255, 0.37)
+  @media(min-width: $screen-sm-min){
+    &:hover,
+    &:focus{
+      color: inherit;
+      @include bg-gradient();
+      &:before{
+        content: "";
+        position: absolute;
+        top:0;
+        right:0;
+        bottom:0;
+        left: 0;
+        border-radius: inherit;
+        border: 3px solid rgba(255, 255, 255, 0.37)
+      }
     }
-
   }
 }
 
